in GatherData4Viz.ipynb: now reference counts added to the matrix

--- a/ipynb/GatherData4Viz.ipynb
+++ b/ipynb/GatherData4Viz.ipynb
@@ -34,24 +34,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/rromanello/.pyenv/versions/phd-py2/lib/python2.7/site-packages/matplotlib/__init__.py:1350: UserWarning:  This call to matplotlib.use() has no effect\n",
-      "because the backend has already been chosen;\n",
-      "matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
-      "or matplotlib.backends is imported for the first time.\n",
-      "\n",
-      "  warnings.warn(_use_error_msg)\n"
+      "total 42832\r\n",
+      "-rw-rw-r-- 1 mromanello    57721 Aug 11 11:35 aeneid.json\r\n",
+      "-rwxr--r-- 1 mromanello  1572864 Aug 18 11:01 \u001b[0m\u001b[01;32mcitedloci_api_output.json\u001b[0m*\r\n",
+      "-rw-rw-r-- 1 mromanello 41306724 Aug 11 12:36 matchmaker_api_output.json\r\n",
+      "-rwxrwxr-x 1 mromanello   758146 Aug 11 11:35 \u001b[01;32mperseus_aeneid.json\u001b[0m*\r\n",
+      "-rw-rw-r-- 1 mromanello   114891 Aug 11 12:58 quot_freq3.json\r\n",
+      "-rw-rw-r-- 1 mromanello    11298 Aug 11 11:35 quot_freq_empty2.json\r\n",
+      "-rw-rw-r-- 1 mromanello     1290 Aug 11 11:35 quot_freq_empty.json\r\n",
+      "-rw-rw-r-- 1 mromanello    18376 Aug 11 12:21 test.json\r\n"
      ]
     }
    ],
+   "source": [
+    "ll ../data/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "import matplotlib; matplotlib.use('Agg')\n",
     "%matplotlib inline\n",
@@ -64,12 +78,12 @@
     "import requests\n",
     "import seaborn as sns;sns.set()\n",
     "import codecs\n",
-    "#from MyCapytain.common.reference import URN"
+    "from MyCapytain.common.reference import URN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -106,9 +120,9 @@
     "        temp = {}\n",
     "        for range_start,range_end in chunks.keys():\n",
     "            if (range_start < max_line_number and range_end <= max_line_number):\n",
-    "                temp[\"%i-%i\"%(range_start,range_end)] = {\"references\":[],\"quotations\":[]}\n",
+    "                temp[\"%i-%i\"%(range_start,range_end)] = {\"reference_count\":0,\"quotation_count\":0,\"results\":[]}\n",
     "            elif(range_start < max_line_number and range_end > max_line_number):\n",
-    "                temp[\"%i-%i\"%(range_start,range_end)] = {\"references\":[],\"quotations\":[]}\n",
+    "                temp[\"%i-%i\"%(range_start,range_end)] = {\"reference_count\":0,\"quotation_count\":0,\"results\":[]}\n",
     "            else:\n",
     "                temp[\"%i-%i\"%(range_start,range_end)] = np.nan\n",
     "        quotation_freq_matrix[book_number] = temp\n",
@@ -120,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -156,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -256,24 +270,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Query the CitedLoci API"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -283,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -294,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -316,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -339,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -350,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -361,7 +357,7 @@
        "29941"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -384,7 +380,7 @@
        "  u'000395a29c586c8ca10e4bbade544dde')]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,9 +391,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -507,7 +503,7 @@
        "51-100  {u'quotations': [], u'references': []}  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,23 +524,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'URN' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-35-7e50f26cd79e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0murn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquotation_id\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mquoted_urns\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mquoted_urn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mURN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mbook_n\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mline_n\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mquoted_urn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreference\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mbook_n\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbook_n\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mline_n\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_n\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'URN' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for urn, quotation_id in quoted_urns:\n",
     "    quoted_urn = URN(urn)\n",
@@ -555,7 +539,130 @@
     "        # find the chunk in which the line falls\n",
     "        if (line_n >= start_range and line_n <= end_range):\n",
     "            if(quotation_freq_df.loc[\"%i-%i\"%(start_range,end_range)][book_n] is not np.nan):\n",
-    "                quotation_freq_df.loc[\"%i-%i\"%(start_range,end_range)][book_n][\"quotations\"].append(1)"
+    "                quotation_freq_df.loc[\"%i-%i\"%(start_range,end_range)][book_n][\"quotation_count\"] +=1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1-50</th>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 59...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 22...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 18...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 26...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 14...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 35...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 24...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 13...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 88...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 80...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 10...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 11...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51-100</th>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 32...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 85...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 17...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 38...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 82...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 22...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 14...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 14...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 68...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 37...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 13...</td>\n",
+       "      <td>{u'reference_count': 0, u'quotation_count': 15...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                       1   \\\n",
+       "1-50    {u'reference_count': 0, u'quotation_count': 59...   \n",
+       "51-100  {u'reference_count': 0, u'quotation_count': 32...   \n",
+       "\n",
+       "                                                       2   \\\n",
+       "1-50    {u'reference_count': 0, u'quotation_count': 22...   \n",
+       "51-100  {u'reference_count': 0, u'quotation_count': 85...   \n",
+       "\n",
+       "                                                       3   \\\n",
+       "1-50    {u'reference_count': 0, u'quotation_count': 18...   \n",
+       "51-100  {u'reference_count': 0, u'quotation_count': 17...   \n",
+       "\n",
+       "                                                       4   \\\n",
+       "1-50    {u'reference_count': 0, u'quotation_count': 26...   \n",
+       "51-100  {u'reference_count': 0, u'quotation_count': 38...   \n",
+       "\n",
+       "                                                       5   \\\n",
+       "1-50    {u'reference_count': 0, u'quotation_count': 14...   \n",
+       "51-100  {u'reference_count': 0, u'quotation_count': 82...   \n",
+       "\n",
+       "                                                       6   \\\n",
+       "1-50    {u'reference_count': 0, u'quotation_count': 35...   \n",
+       "51-100  {u'reference_count': 0, u'quotation_count': 22...   \n",
+       "\n",
+       "                                                       7   \\\n",
+       "1-50    {u'reference_count': 0, u'quotation_count': 24...   \n",
+       "51-100  {u'reference_count': 0, u'quotation_count': 14...   \n",
+       "\n",
+       "                                                       8   \\\n",
+       "1-50    {u'reference_count': 0, u'quotation_count': 13...   \n",
+       "51-100  {u'reference_count': 0, u'quotation_count': 14...   \n",
+       "\n",
+       "                                                       9   \\\n",
+       "1-50    {u'reference_count': 0, u'quotation_count': 88...   \n",
+       "51-100  {u'reference_count': 0, u'quotation_count': 68...   \n",
+       "\n",
+       "                                                       10  \\\n",
+       "1-50    {u'reference_count': 0, u'quotation_count': 80...   \n",
+       "51-100  {u'reference_count': 0, u'quotation_count': 37...   \n",
+       "\n",
+       "                                                       11  \\\n",
+       "1-50    {u'reference_count': 0, u'quotation_count': 10...   \n",
+       "51-100  {u'reference_count': 0, u'quotation_count': 13...   \n",
+       "\n",
+       "                                                       12  \n",
+       "1-50    {u'reference_count': 0, u'quotation_count': 11...  \n",
+       "51-100  {u'reference_count': 0, u'quotation_count': 15...  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quotation_freq_df.head(2)"
    ]
   },
   {
@@ -578,6 +685,165 @@
    ],
    "source": [
     "save_matrix_as_json(quotation_freq_df, \"../data/quot_freq3.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query the CitedLoci API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load the data about references to the Aeneid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "my_data = json.load(codecs.open(\"../data/citedloci_api_output.json\",\"r\",\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'document': {u'doi': u'10.2307/1562134',\n",
+       "  u'title': u'The Way We Used to Eat: Diet_ Community_ and History at Rome'},\n",
+       " u'line_number': 252,\n",
+       " u'reference_type': u'scope',\n",
+       " u'snippet': u'Another preoccupation of the De gente, which is inviting for the cultural historian, was what, and from which people, the Romans copied : \"quid a quaque traxerint gente per imitationem\" (fr. 21 Peter, Servius, ad <em>Aen.</em> <em>7.176).</em>',\n",
+       " u'surface': u'Aen. 7.176).',\n",
+       " u'urns': {u'author_urn': u'urn:cts:latinLit:phi0690',\n",
+       "  u'reference_urn': u'urn:cts:latinLit:phi0690.phi003:7.176',\n",
+       "  u'work_urn': u'urn:cts:latinLit:phi0690.phi003'}}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_data[\"result\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "referenced_urns = [(doc[\"urns\"][\"reference_urn\"]\n",
+    "                    ,URN(doc[\"urns\"][\"reference_urn\"]).reference.list) for doc in my_data[\"result\"]\n",
+    "                                                    if URN(doc[\"urns\"][\"reference_urn\"]).reference.list is not None\n",
+    "                                                      and len(URN(doc[\"urns\"][\"reference_urn\"]).reference.list)==2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12056"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(referenced_urns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'urn:cts:latinLit:phi0690.phi003:7.176', [u'7', u'176'])]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "referenced_urns[:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "invalid_citations = []\n",
+    "for urn in referenced_urns:\n",
+    "    referenced_urn = URN(urn[0])\n",
+    "    book_n, line_n = referenced_urn.reference.list\n",
+    "    book_n = int(book_n)\n",
+    "    line_n = int(line_n)\n",
+    "    for start_range,end_range in chunks:\n",
+    "        # find the chunk in which the line falls\n",
+    "        if (line_n >= start_range and line_n <= end_range):\n",
+    "            try:\n",
+    "                if(quotation_freq_df.loc[\"%i-%i\"%(start_range,end_range)][book_n] is not np.nan):\n",
+    "                    quotation_freq_df.loc[\"%i-%i\"%(start_range,end_range)][book_n][\"reference_count\"] +=1 \n",
+    "            except Exception as e:\n",
+    "                invalid_citations.append(urn[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "save_matrix_as_json(quotation_freq_df, \"../data/quot_freq4.json\")"
    ]
   },
   {
