committing local changes to GatherData4Viz.ipynb

--- a/ipynb/GatherData4Viz.ipynb
+++ b/ipynb/GatherData4Viz.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -120,9 +120,9 @@
     "        temp = {}\n",
     "        for range_start,range_end in chunks.keys():\n",
     "            if (range_start < max_line_number and range_end <= max_line_number):\n",
-    "                temp[\"%i-%i\"%(range_start,range_end)] = {\"reference_count\":0,\"quotation_count\":0,\"results\":[]}\n",
+    "                temp[\"%i-%i\"%(range_start,range_end)] = {\"reference_count\":0,\"quotation_count\":0,\"results\":set()}\n",
     "            elif(range_start < max_line_number and range_end > max_line_number):\n",
-    "                temp[\"%i-%i\"%(range_start,range_end)] = {\"reference_count\":0,\"quotation_count\":0,\"results\":[]}\n",
+    "                temp[\"%i-%i\"%(range_start,range_end)] = {\"reference_count\":0,\"quotation_count\":0,\"results\":set()}\n",
     "            else:\n",
     "                temp[\"%i-%i\"%(range_start,range_end)] = np.nan\n",
     "        quotation_freq_matrix[book_number] = temp\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -279,7 +279,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from flask_restful import marshal, fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "quotation_fields = {\n",
+    "    \"id\": fields.String\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -290,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -312,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -335,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -346,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -357,7 +381,7 @@
        "29941"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -380,136 +404,13 @@
        "  u'000395a29c586c8ca10e4bbade544dde')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "quoted_urns[:1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1-50</th>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51-100</th>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "      <td>{u'quotations': [], u'references': []}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            1   \\\n",
-       "1-50    {u'quotations': [], u'references': []}   \n",
-       "51-100  {u'quotations': [], u'references': []}   \n",
-       "\n",
-       "                                            2   \\\n",
-       "1-50    {u'quotations': [], u'references': []}   \n",
-       "51-100  {u'quotations': [], u'references': []}   \n",
-       "\n",
-       "                                            3   \\\n",
-       "1-50    {u'quotations': [], u'references': []}   \n",
-       "51-100  {u'quotations': [], u'references': []}   \n",
-       "\n",
-       "                                            4   \\\n",
-       "1-50    {u'quotations': [], u'references': []}   \n",
-       "51-100  {u'quotations': [], u'references': []}   \n",
-       "\n",
-       "                                            5   \\\n",
-       "1-50    {u'quotations': [], u'references': []}   \n",
-       "51-100  {u'quotations': [], u'references': []}   \n",
-       "\n",
-       "                                            6   \\\n",
-       "1-50    {u'quotations': [], u'references': []}   \n",
-       "51-100  {u'quotations': [], u'references': []}   \n",
-       "\n",
-       "                                            7   \\\n",
-       "1-50    {u'quotations': [], u'references': []}   \n",
-       "51-100  {u'quotations': [], u'references': []}   \n",
-       "\n",
-       "                                            8   \\\n",
-       "1-50    {u'quotations': [], u'references': []}   \n",
-       "51-100  {u'quotations': [], u'references': []}   \n",
-       "\n",
-       "                                            9   \\\n",
-       "1-50    {u'quotations': [], u'references': []}   \n",
-       "51-100  {u'quotations': [], u'references': []}   \n",
-       "\n",
-       "                                            10  \\\n",
-       "1-50    {u'quotations': [], u'references': []}   \n",
-       "51-100  {u'quotations': [], u'references': []}   \n",
-       "\n",
-       "                                            11  \\\n",
-       "1-50    {u'quotations': [], u'references': []}   \n",
-       "51-100  {u'quotations': [], u'references': []}   \n",
-       "\n",
-       "                                            12  \n",
-       "1-50    {u'quotations': [], u'references': []}  \n",
-       "51-100  {u'quotations': [], u'references': []}  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "quotation_freq_df.head(2)"
    ]
   },
   {
